spec/fixtures/test_suites/malformed/invalid_methods_defined/attack_on_port_only.rb
class AttackOnPortOnly < TestCaseTemplate
  @description = 'testcase for test'
  @requires = 'Individual'
  @protocol = 'test'
  @author = 'test'

  def attack_on_port(_)
    nil
  end
end
